--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <img src="images/favicon.png" alt="" class="icon">
-    <h1>KBG - AP SERVER</h1>
-    <h3>Auteur: Nicolas Chourot</h3>
+    <h1>KBG - AP SERVER - LABO 03</h1>
     <h3>Département d'informatique</h3>
     <h3>Collège Lionel-Groulx</h3>
     <hr>
